--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -39,5 +39,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(annonces) }}
+    </div>
+
     <a href="{{ path('app_annonce_new') }}">Create new</a>
 {% endblock %}
