--- a/templates/domaine/index.html.twig
+++ b/templates/domaine/index.html.twig
@@ -31,5 +31,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(domaines) }}
+    </div>
+
     <a href="{{ path('app_domaine_new') }}">Create new</a>
 {% endblock %}
