--- a/templates/file/index.html.twig
+++ b/templates/file/index.html.twig
@@ -33,5 +33,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(files) }}
+    </div>
+
     <a href="{{ path('app_file_new') }}">Create new</a>
 {% endblock %}
