--- a/templates/image/index.html.twig
+++ b/templates/image/index.html.twig
@@ -31,5 +31,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(images) }}
+    </div>
+
     <a href="{{ path('app_image_new') }}">Create new</a>
 {% endblock %}
