--- a/templates/pub/index.html.twig
+++ b/templates/pub/index.html.twig
@@ -35,5 +35,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(pubs) }}
+    </div>
+
     <a href="{{ path('app_pub_new') }}">Create new</a>
 {% endblock %}
