--- a/templates/type_file/index.html.twig
+++ b/templates/type_file/index.html.twig
@@ -31,5 +31,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(type_files) }}
+    </div>
+
     <a href="{{ path('app_type_file_new') }}">Create new</a>
 {% endblock %}
