--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -45,5 +45,9 @@
         </tbody>
     </table>
 
+    <div class="navigation">
+        {{ knp_pagination_render(users) }}
+    </div>
+
     <a href="{{ path('app_user_new') }}">Create new</a>
 {% endblock %}
