--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -11,6 +11,7 @@
                 <th>Id</th>
                 <th>Titre</th>
                 <th>Contenue</th>
+                <th>Profils</th>
                 <th>Datelimite</th>
                 <th>Dossier</th>
                 <th>Reference</th>
@@ -23,6 +24,7 @@
                 <td>{{ annonce.id }}</td>
                 <td>{{ annonce.titre }}</td>
                 <td>{{ annonce.contenue }}</td>
+                <td>{{ annonce.profils }}</td>
                 <td>{{ annonce.datelimite ? annonce.datelimite|date('Y-m-d') : '' }}</td>
                 <td>{{ annonce.dossier }}</td>
                 <td>{{ annonce.reference }}</td>
