--- a/templates/annonce/show.html.twig
+++ b/templates/annonce/show.html.twig
@@ -20,6 +20,10 @@
                 <td>{{ annonce.contenue }}</td>
             </tr>
             <tr>
+                <th>Profils</th>
+                <td>{{ annonce.profils }}</td>
+            </tr>
+            <tr>
                 <th>Datelimite</th>
                 <td>{{ annonce.datelimite ? annonce.datelimite|date('Y-m-d') : '' }}</td>
             </tr>
