--- a/templates/file/show.html.twig
+++ b/templates/file/show.html.twig
@@ -19,6 +19,10 @@
                 <th>Servername</th>
                 <td>{{ file.servername }}</td>
             </tr>
+            <tr>
+                <th>Annonce</th>
+                <td>{{ file.annonce }}</td>
+            </tr>
         </tbody>
     </table>
 
