pubhor et pubver

--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -78,7 +78,7 @@
                 <a href="#" class="brand-link">
                 <img src="/dist/images/logo_dgsr.png" alt="DGSR Logo" class="brand-image img-circle elevation-3"
                     style="opacity: .8">
-                <span class="brand-text font-weight-light">RH-PAIE-DGSR</span>
+                <span class="brand-text font-weight-light">WORKATMADA</span>
                 </a>
 
                 <!-- Sidebar -->
