--- a/templates/pub/index.html.twig
+++ b/templates/pub/index.html.twig
@@ -21,7 +21,7 @@
                 <td>{{ pub.id }}</td>
                 <td>{{ pub.image }}</td>
                 <td>{{ pub.lien }}</td>
-                <td>{{ pub.isactive ? 'Yes' : 'No' }}</td>
+                <td>{{ pub.isactive ? 'Oui' : 'Non' }}</td>
                 <td>
                     <a href="{{ path('app_pub_show', {'id': pub.id}) }}">show</a>
                     <a href="{{ path('app_pub_edit', {'id': pub.id}) }}">edit</a>
