--- a/templates/pub/show.html.twig
+++ b/templates/pub/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Isactive</th>
-                <td>{{ pub.isactive ? 'Yes' : 'No' }}</td>
+                <td>{{ pub.isactive ? 'Oui' : 'Non' }}</td>
             </tr>
         </tbody>
     </table>
