--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -41,7 +41,7 @@
             </tr>
             <tr>
                 <th>Isactive</th>
-                <td>{{ user.isactive ? 'Yes' : 'No' }}</td>
+                <td>{{ user.isactive ? 'Oui' : 'Non' }}</td>
             </tr>
         </tbody>
     </table>
