--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -31,7 +31,7 @@
                 <td>{{ user.prenom }}</td>
                 <td>{{ user.tel }}</td>
                 <td>{{ user.adresse }}</td>
-                <td>{{ user.isactive ? 'Yes' : 'No' }}</td>
+                <td>{{ user.isactive ? 'Oui' : 'Non' }}</td>
                 <td>
                     <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
                     <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
