avancement avant push vers github

--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -177,7 +177,23 @@
                                         <a href="{{ path('app_pub_index') }}" class="nav-link">
                                             <i class="nav-icon far fa-calendar-alt"></i>
                                             <p>
-                                                Publicités
+                                                Pub bannière
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{{ path('app_pub_ver_index') }}" class="nav-link">
+                                            <i class="nav-icon far fa-calendar-alt"></i>
+                                            <p>
+                                                Pub verticale
+                                            </p>
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="{{ path('app_pub_hor_index') }}" class="nav-link">
+                                            <i class="nav-icon far fa-calendar-alt"></i>
+                                            <p>
+                                                Pub horizontale
                                             </p>
                                         </a>
                                     </li>
